# DotEngine

./: .gitignore  CMakeLists.txt  CMakePresets.json  main.cpp
header/: bindings.h  game_window.h  vector3.h
header/Math_H/: mat3.h  mat4.h  vector2.h  vector4.h
header/Objects_H/: object.h  transform.h  world.h
source/: bindings.cpp  game_window.cpp  main  main.cpp  vector2.cpp  vector3.cpp  vector4.cpp
source/Math_C/: mat3.cpp  mat4.cpp  vector2.cpp  vector3.cpp  vector4.cpp
source/Objects_C/: object.cpp  transfrom.cpp  world.cpp
source/main.dSYM/Contents/Resources/DWARF/: main
